# Electronics

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
docs/source/electronics/capacitor/: capacitor.rst
docs/source/electronics/capacitor/docs/: ec_002_С_F010_RC_on_R.csv  ec_002_С_F010_RC_on_R.html  ec_002_С_F050_RC_on_C.csv  ec_002_С_F050_RC_on_R.csv  ec_002_С_F100_RC_on_C.csv  ec_002_С_F100_RC_on_R.csv  ec_002_С_F300_RC_on_C.csv  ec_002_С_F300_RC_on_R.csv  ec_002_С_F500_RC_on_C(не_разряжен).csv  ec_002_С_F500_RC_on_C(разряжен).csv  ec_002_С_F500_RC_on_R.csv  measurements_f050.csv  measurements_f050.html  measurements_f100.csv  measurements_f300.csv  measurements_f300.html  measurements_f500(discharged).csv  measurements_f500(discharged).html  measurements_loaded_capacitor_f100.csv  measurements_loaded_capacitor_f100.html  measurements_square_f167.html  measurements_square_f500.csv  measurements_square_f500_more_waves.csv  measurements_square_f500_more_waves.html  measurements_triangle_f100.html  measurements_triangle_f500(charged).csv  measurments_square_f100.csv  measurments_square_f100.html  measurments_square_f167.csv  measurments_square_f500.html
docs/source/electronics/diode/: diode.rst
docs/source/electronics/diode/docs/: vd_blue.csv  vd_blue.html  vd_blue_iu.html  (+10 more)
docs/source/electronics/inductance/: inductance.rst
docs/source/electronics/mosfet/: mosfet.rst
docs/source/microcontrollers/stmfreertos/: stmfreertos.rst
docs/source/mosfet/: mosfet.rst
docs/source/physics7/intro/: intro.rst
(+36 files in other folders)
